# lazyops

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  config.example.toml  flake.nix
examples/: test_policies.rs
nix/: default.nix  hm.nix
src/: app.rs  cache.rs  config.rs  events.rs  lib.rs  main.rs  terminal.rs
src/azure/: client.rs  mod.rs  types.rs
src/ui/: help.rs  input.rs  mod.rs  preview.rs  sprint_bar.rs  work_items.rs
src/ui/cicd/: dialogs.rs  mod.rs  pipelines.rs  preview.rs  releases.rs
src/ui/prs/: list.rs  mod.rs  preview.rs
src/ui/tasks/: mod.rs  preview.rs  sprint_bar.rs  work_items.rs
