[package]
name = "lazyops"
version = "0.1.0"
edition = "2021"
description = "A lazygit-style TUI for Azure DevOps work items"
default-run = "lazyops"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
textwrap = "0.16"
html2text = "0.12"
arboard = "3"
fuzzy-matcher = "0.3.7"
open = "5.3.3"
futures = "0.3"

[[bin]]
name = "lazyops"
path = "src/main.rs"

[[bin]]
name = "test_commands"
path = "src/bin/test_commands.rs"

[profile.release]
lto = true
strip = true
